--- a/src/scss/themes/fylr/components/_menu.scss
+++ b/src/scss/themes/fylr/components/_menu.scss
@@ -14,6 +14,13 @@
 		> .cui-label {
 			max-width: 200px;
 		}
+
+
+		.cui-menu-item {
+			padding: 0 $item-list-indent;
+			height: $item-list-height;
+			color: gray('600');
+		}
 	}
 
 	.cui-vertical-layout {
